--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,25 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-content class="slide-content">
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<div ion-fixed>
+	<ion-slides #slider style="padding-top: 60px">
+		<ion-slide>
+			<div class="slide slide_1 "></div>
+		</ion-slide>
+		<ion-slide>
+			<div class="slide slide_2 "></div>
+		</ion-slide>
+		<ion-slide>
+			<div class="slide slide_3 "></div>
+		</ion-slide>
+		<ion-slide>
+			<div class="slide slide_4 "></div>
+		</ion-slide>
+	</ion-slides>
+
+	<h2>Life is an adventure, not a race. Here are some film posters to enjoy.</h2>
+	<div text-center>
+		<button ion-button round color="dark">Call to Action</button>
+	</div>
+</div>
+
 </ion-content>
